@@ -4,7 +4,6 @@ New features for the Hildon Application Manager
 * Complete port to new Fremantle APIs [mvo, mvo-fremantle-port]
 
 - update-notifier.c: alarm API.
-- dbus.c: MCE_REBOOT_REQ
 
 * Show repository that a package is going to be installed from
   [victor, vjaquez-show-repo]
