@@ -199,6 +199,12 @@ one or more of the following words:
   before installation and a suggestion is given to the user to make a
   backup.
 
+- system-update
+
+  Specifying this flag will tell the AM that this is a meta package
+  that controls operating system updates.  The AM will adjust some
+  parts of its UI.
+
 - close-apps
 
   The same as 'reboot', for compatibility.  Deprecated.  (In the past,
@@ -207,20 +213,11 @@ one or more of the following words:
   UI, the three individual choices have been reduced to only one: all
   of the three actions are either done together, or none is done.)
 
-- system-update
-
-  Specifying this flag will tell the AM that this is a meta package
-  that controls operating system updates.  The AM will adjust some
-  parts of its UI.
-
 - flash-and-reboot
 
-  The same as 'reboot' but in addition, the AM will run
-  /usr/bin/flash-and-reboot after everything else has been done.  The
-  flash-and-reboot program is run as "user" with a single argument of
-  "--yes".  The idea is that flash-and-reboot would ask the user for
-  permission to proceed in order to prevent surprises, unless given
-  the "--yes" option.
+  The same as 'reboot', for compatibility.  Deprecated.  (In the past,
+  the AM would run /usr/bin/flash-and-reboot after everything else has
+  been done.)
 
 A operation usually involves more than one package and the flags of
 all packages are merged.
