@@ -818,11 +818,11 @@ apt_worker_get_system_update_packages (int state,
 }
 
 void
-apt_worker_flash_and_reboot (apt_worker_callback *callback,
-			     void *data)
+apt_worker_reboot (apt_worker_callback *callback,
+		   void *data)
 {
   request.reset ();
-  call_apt_worker (APTCMD_FLASH_AND_REBOOT, APTSTATE_DEFAULT,
+  call_apt_worker (APTCMD_REBOOT, APTSTATE_DEFAULT,
 		   request.get_buf (), request.get_len (),
 		   callback, data);
 }
